kubernetes/apps/identity/canaille/app/deployment.yaml
# SPDX-FileCopyrightText: 2025 Sofie <sofie+git@mailbox.org>
#
# SPDX-License-Identifier: MIT

# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.33.2/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canaille
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: canaille
  template:
    metadata:
      labels:
        app.kubernetes.io/name: canaille
    spec:
      containers:
        - name: canaille
          image: docker.io/yaalcoop/canaille:0.2.3
          ports:
            - containerPort: 5000
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: config
          configMap:
            name: canaille-config
